--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tagsinput": "^3.20.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.2"
